--- a/less/home-page.less
+++ b/less/home-page.less
@@ -68,6 +68,8 @@ header {
     border-bottom: 2px dashed @navigation-border;
     @media @mobile {
       width: 100%; 
+      display: flex; 
+      flex-direction: column-reverse; 
     }
 
     .text-content {
